# shallow-water

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  run.sh  run_cuda.sh  run_cuda_4gpu.sh  run_leo3e.sh
apps/: main.cpp
configs/: .clang-format  config.hpp  config.toml  format-cpp.sh  parse_config_helper.hpp  simulation_config.cpp  simulation_config.hpp  simulation_config.toml
docs/: SWE_first.pptx  SWE_second.pptx  architecture.md  bathymetry.md  clusters.md  numerics.md  numerics_without_bathymetry.md
include/: constants.hpp
include/backend/cuda/: cuda_kernels.cuh  cuda_solver.hpp
include/backend/cuda/four_gpu/: cuda_kernels_4gpu.cuh  cuda_solver_4gpu.hpp
include/backend/openmp/: fast_hll_muscl_bathy_omp_solver.hpp  omp_kernels.hpp  omp_solver.hpp
include/backend/serial/: serial_solver.hpp
include/backend/serial/HPC/: HPC_solver.hpp  explain_fast.txt  fast_hll_muscl_bathy_kernels.hpp  fast_hll_muscl_bathy_solver.hpp
include/backend/serial/finite_volume/: finite_volume.hpp  finite_volume_bathy.hpp
include/backend/serial/flux_assembly/: flux_assembly.hpp  flux_assembly_bathy.hpp
include/backend/serial/reconstruction/: muscl.hpp  piecewise_const.hpp  reconstruction.hpp
include/backend/serial/riemann/: HLL.hpp  ROE.hpp  riemann.hpp  rusanov.hpp
include/backend/serial/ssp_rk3/: ssp_rk3.hpp
include/bathymetry/: apply_bathymetry.hpp  bathymetry.hpp  gaussian_hill.hpp  no_bathymetry.hpp
include/boundary/: boundary_condition.hpp  reflecting_walls.hpp
include/core/: array2D.hpp  cell_state.hpp  grid.hpp  state.hpp  xflux.hpp  xflux_field.hpp  yflux.hpp  yflux_field.hpp
include/initial_condition/: apply_initial_condition.hpp  dam_break.hpp  dam_break_radial.hpp  gauss_initial.hpp  initial_condition.hpp  still_water.hpp
include/io/: netCDF_writer.cpp  netCDF_writer.hpp  sanity_checks_netcdf_writer.cpp  sanity_checks_netdcdf_writer.hpp
include/solver_assembly/: solver_assembly.hpp  time_utils.hpp
output/: simulation.nc
python/: plot_scaling_gpu.py  visualize.py  visualize_2D_animated.py  visualize_3D_animated.py  visualize_correct_grid2D.py  visualize_correct_grid3D.py  visualize_experimental3D.py
python/sanity_checks/: visualize.py  viz_energy.py
scripts/: run.sh
scripts/leo3e/: run_openmp.sh  run_serial.sh
scripts/mp3-gpu/: run_cuda.sh  run_cuda_4gpu.sh
src/io/: netCDF_writer.cpp
tests/sanity_checks/: debug.hpp  mass_conservation.hpp  positivity.hpp  sanity_checks.cpp  sanity_checks.hpp
